--- a/docker-compose-local.yml
+++ b/docker-compose-local.yml
@@ -49,7 +49,7 @@ couchbase3:
     restart: always
 
 benchmark_test:
-    image: 0x74696d/cbc-benchmark
+    image: 0x74696d/cbc-benchmark-go
     mem_limit: 512m
     volumes:
     - ./test:/src
@@ -57,6 +57,7 @@ benchmark_test:
     - consul
     environment:
     - ITEMS=1000
+    - GOPATH=/src/.godeps:/src
     command: /bin/bash
     restart: never
 
